# git-branch-comparison

./: MANIFEST.in  README.md  analyzers.py  config.txt  git_comparator.py  main.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt
src/git_branch_comparison/: __init__.py  __main__.py  analyzers.py  cli.py  git_comparator.py  models.py  report_generator.py
tests/: __init__.py  test_analyzers.py  test_models.py
